--- a/themes/Adwaita/gtk-3.0/gtk-main.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main.css
@@ -1,19 +1,10 @@
 /* Default color scheme */
-@define-color base_color #ffffff;
-@define-color bg_color #ededed;
-@define-color selected_bg_color #4a90d9;
-@define-color text_color #2e3436;
-@define-color fg_color #2e3436;
-@define-color selected_fg_color #ffffff;
-@define-color unfocused_bg_color @bg_color;
-
-/* Colormap actually used by the theme, to be overridden in other css files */
-@define-color theme_base_color @base_color;
-@define-color theme_text_color @text_color;
-@define-color theme_bg_color @bg_color;
-@define-color theme_fg_color @fg_color;
-@define-color theme_selected_bg_color @selected_bg_color;
-@define-color theme_selected_fg_color @selected_fg_color;
+@define-color theme_base_color #ffffff;
+@define-color theme_bg_color #ededed;
+@define-color theme_selected_bg_color #4a90d9;
+@define-color theme_text_color #2e3436;
+@define-color theme_fg_color @theme_text_color;
+@define-color theme_selected_fg_color #ffffff;
 
 @define-color placeholder_text_color shade(@text_color, 3.5);
 
@@ -38,17 +29,10 @@
 @define-color menu_combobox_border #3277bf;
 @define-color menu_separator mix (@menu_fg_color, @menu_bg_color, 0.9);
 
-@define-color frame_color #8a9580;
 @define-color inactive_frame_color #c7ccc1;
-
-@define-color keyboard_focus_border_a #a2c9f1;
-@define-color keyboard_focus_border_b #6794cf;
 
 @define-color sidebar_bg shade (@theme_bg_color, 1.025);
 @define-color sidebar_bg_unfocused mix(@sidebar_bg, @theme_unfocused_base_color, 0.5);
-
-@define-color focused_entry_border #579eea;
-@define-color focused_entry_inset alpha (#d7e4f1, 0.50);
 
 @define-color button_gradient_color_a shade(@theme_bg_color, 1.05);
 @define-color button_gradient_color_b @theme_bg_color;
@@ -60,19 +44,9 @@
 @define-color button_active_text @theme_base_color;
 @define-color button_active_text_shadow alpha(black, 0.4);
 @define-color button_text_shadow alpha(white, 0.4);
-@define-color primary_toolbar_button_text_shadow alpha(black, 0.1);
 
 @define-color button_hover_gradient_color_a @theme_base_color;
 @define-color button_hover_gradient_color_b shade (@button_gradient_color_a, 0.94);
-
-@define-color unfocused_button_hover_background @unfocused_theme_base_color;
-
-@define-color button_raised_gradient_color_a @button_gradient_color_a;
-@define-color button_raised_gradient_color_b @button_gradient_color_b;
-@define-color button_raised_linked_shadow alpha(@theme_base_color, 0.70);
-
-@define-color button_raised_active_gradient_color_a @button_active_gradient_color_a;
-@define-color button_raised_active_gradient_color_b alpha(@button_active_gradient_color_b, 0.13);
 
 @define-color insensitive_bg_color #f4f4f2;
 @define-color insensitive_fg_color #a7aba7;
@@ -91,22 +65,18 @@
 @define-color scrollbar_slider_unfocused @theme_unfocused_bg_color;
 
 @define-color switch_slider_color #eeeeec;
-@define-color switch_slider_active_border #2a79cb;
-@define-color switch_slider_insensitive_bg @insensitive_bg_color;
-
 @define-color switch_trough_active_color @theme_base_color;
 @define-color switch_trough_active_bg_a #509ae7;
 @define-color switch_trough_active_bg_b #a5d0ff;
 
 @define-color progressbar_background_a #76b0ec;
 @define-color progressbar_background_b #1f72c6;
-@define-color progressbar_pattern @switch_slider_active_border;
-@define-color progressbar_border @switch_slider_active_border;
+@define-color progressbar_pattern #2a79cb;
+@define-color progressbar_border @progressbar_pattern;
 @define-color progressbar_unfocused_background @theme_base_color;
 @define-color progressbar_unfocused_border @unfocused_borders;
 
 @define-color entry_text_color @theme_text_color;
-
 @define-color entry_background_a shade(@theme_base_color, 0.94);
 @define-color entry_background_b @theme_base_color;
 
@@ -116,12 +86,7 @@
 @define-color internal_element_prelight @theme_text_color;
 @define-color internal_element_insensitive mix(@internal_element_color, @theme_base_color, 0.7);
 
-@define-color scale_fill @insensitive_borders;
-@define-color scale_border_a @internal_element_color;
-@define-color scale_border_b shade (@internal_element_color, 1.25);
 @define-color scale_progress_fill #2c85e2;
-
-@define-color highlighted_border #8a8f8a;
 
 @define-color notebook_active_tab_border #1372d3;
 @define-color notebook_selected_tab_color #8dc0f3;
@@ -137,14 +102,12 @@
 @define-color toolbar_border_top shade(@borders, 0.9);
 @define-color toolbar_border_bottom shade(@borders, 1.1);
 
+@define-color toolbar_active_button_color #909081;
 @define-color toolbar_button_prelight alpha(white, 0.4);
 
-@define-color toolbar_active_button_color #909081;
+@define-color primary_toolbar_button_text_shadow alpha(black, 0.1);
 
-@define-color primary_toolbar_entry_bg @theme_base_color;
-@define-color primary_toolbar_entry_fg @theme_text_color;
-
-@define-color treeview_focus_border @switch_slider_active_border;
+@define-color treeview_focus_border #2a79cb;
 
 @define-color expander_row_selected_color #acccee;
 
