--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -500,6 +500,9 @@ GtkColorEditor GtkColorSwatch.color-light:hover {
     border-color: alpha(black, 0.3);
 }
 
+GtkColorButton.button {
+    padding: 1px 20px;
+}
 
 /****************
  * Progress bar *
