--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -806,6 +806,10 @@ GtkIconView.view.cell {
     border-radius: 4px;
 }
 
+GtkColorButton.button {
+    padding: 1px 16px;
+}
+
 GtkColorSwatch {
     border-width: 1px;
     border-style: solid;
