terminal: set a thinner border for the terminal palette table

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -27,6 +27,10 @@ TerminalWindow GtkNotebook.notebook {
     border-left-width: 0;
 }
 
+#terminal-palette-table GtkColorButton.button {
+    padding: 1px 4px;
+}
+
 /* nautilus */
 .nautilus-canvas-item {
     border-radius: 5px;
