--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -205,7 +205,7 @@ GtkTreeView.view.separator,
 GtkTreeView.separator,
 .separator,
 .separator:hover {
-    color: @borders;
+    color: shade(@borders, 1.30);
 }
 
 GtkTreeView.view.separator:backdrop,
@@ -1095,7 +1095,9 @@ GtkLinkButton.button *:active {
     text-shadow: none;
 }
 
-.button .separator { color: shade(@internal_element_color, 1.3); }
+.button .separator { 
+    color: shade(@internal_element_color, 1.30);
+}
 
 /*****************
  * Notebooks and *
